// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

// Authentication and Authorization related APIs.
package auth;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "auth.proto";

// Auth REST API
service AuthV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "auth";
    // API Version.
    option (venice.apiVersion) = "v1";
    option (venice.apiGrpcCrudService) = "User";
    option (venice.apiGrpcCrudService) = "AuthenticationPolicy";
    option (venice.apiGrpcCrudService) = "Role";
    option (venice.apiGrpcCrudService) = "RoleBinding";

    option (venice.apiRestService) = {
        Object: "User"
        Method: [ "get", "put", "delete", "post", "list" ]
    };
    option (venice.apiRestService) = {
        Object: "AuthenticationPolicy"
        Method: [ "get", "put", "post" ]
    };
    // Action to test ldap connection with the passed in AuthenticationPolicy object. It doesn't test ldap config in AuthenticationPolicy
    // already saved in API server. If user wants to test saved config, then user will have to fetch it first and use it with this action.
    option (venice.apiAction) = {
        Object: "AuthenticationPolicy"
        Action: "LdapConnectionCheck"
        Request: "AuthenticationPolicy"
        Response: "AuthenticationPolicy"
    };
    // Action to test ldap bind with the passed in AuthenticationPolicy object. It doesn't test ldap config  in AuthenticationPolicy
    // already saved in API server. If user wants to test saved config, then user will have to fetch it first and use it with this action.
    option (venice.apiAction) = {
        Object: "AuthenticationPolicy"
        Action: "LdapBindCheck"
        Request: "AuthenticationPolicy"
        Response: "AuthenticationPolicy"
    };
    option (venice.apiRestService) = {
        Object: "Role"
        Method: [ "get", "put", "delete", "post", "list" ]
    };
    option (venice.apiRestService) = {
        Object: "RoleBinding"
        Method: [ "get", "put", "delete", "post", "list" ]
    };
}
